update dev snapshot